syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ApesJs/bank-app/pb";

message Entry {
  int64 transfer_id = 1;
  int64 account_id = 2;
  int64 amount = 3;
  string type = 4;
  google.protobuf.Timestamp created_at = 5;
}